--- a/Movie_Search_Api_App/index.css
+++ b/Movie_Search_Api_App/index.css
@@ -12,3 +12,14 @@
   flex-flow: row wrap;
   justify-content: space-around;
 }
+
+.search-results-item {
+  width: 300px;
+  text-align: center;
+  text-overflow: ellipsis;
+}
+
+.search-results-item-poster {
+  width: 200px;
+  height: 300px;
+}
